syntax = "proto3";

package pegaflow;

message ResponseStatus {
  bool ok = 1;
  string message = 2;
}

message RegisterContextRequest {
  string instance_id = 1;
  int32 device_id = 2;
  string layer_name = 3;
  bytes wrapper_bytes = 4;
  uint64 num_blocks = 5;
  uint64 bytes_per_block = 6;
  uint64 kv_stride_bytes = 7;
  uint32 segments = 8;
  uint32 tp_rank = 9;
  uint32 tp_size = 10;
  uint32 num_layers = 11;
}

message RegisterContextResponse {
  ResponseStatus status = 1;
}

message SaveLayer {
  string layer_name = 1;
  repeated int32 block_ids = 2;
  repeated bytes block_hashes = 3;
}

message SaveRequest {
  string instance_id = 1;
  uint32 tp_rank = 2;
  int32 device_id = 3;
  repeated SaveLayer saves = 4;
}

message SaveResponse {
  ResponseStatus status = 1;
}

message LoadRequest {
  string instance_id = 1;
  uint32 tp_rank = 2;
  int32 device_id = 3;
  string load_state_shm = 4;
  repeated string layer_names = 5;
  repeated int32 block_ids = 6;
  repeated bytes block_hashes = 7;
}

message LoadResponse {
  ResponseStatus status = 1;
}

message QueryRequest {
  repeated bytes block_hashes = 1;
}

message QueryResponse {
  ResponseStatus status = 1;
  uint64 hit_blocks = 2;
}

message UnregisterRequest {
  string instance_id = 1;
}

message UnregisterResponse {
  ResponseStatus status = 1;
}

message ShutdownRequest {}

message ShutdownResponse {
  ResponseStatus status = 1;
}

message HealthRequest {}

message HealthResponse {
  ResponseStatus status = 1;
}

service Engine {
  rpc RegisterContext(RegisterContextRequest) returns (RegisterContextResponse);
  rpc Save(SaveRequest) returns (SaveResponse);
  rpc Load(LoadRequest) returns (LoadResponse);
  rpc Query(QueryRequest) returns (QueryResponse);
  rpc UnregisterContext(UnregisterRequest) returns (UnregisterResponse);
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
}
